<resources>
    <string name="app_name" translatable="false">BSL</string>
    <string name="about_app">О программе</string>
    <string name="action_settings">Настройки</string>
    <string name="getting_root">Проверка доступа…</string>
    <string name="starting">Запуск…</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="addmod">Добавить мод</string>
    <string name="success">Установка завершена</string>
    <string name="installing">Установка:</string>
    <string name="backingup">Создание резервной копии…</string>
    <string name="theme">Тема</string>
    <string name="extracting">Распаковка:</string>
    <string name="mod">МОД #%1$d</string>
    <string name="install">Установить</string>
    <string name="variant">Выберите действие</string>
    <string name="sign">Подписать</string>
    <string name="signing">Подписание…</string>
    <string name="signwarn">Для создания подписанного APK необходимо скачать оригинальный APK игры Brawl Stars (%1$s МБ). Продолжить?</string>
    <string name="insuccess">Установка не завершена. Установите APK самостоятельно.</string>
    <string name="tabeditor">Редактор вкладок</string>
    <string name="editordesc">Удалить или изменить вкладки</string>
    <string name="entername">Введите новое имя (или оставьте пустым для сброса)</string>
    <string name="remove">Удалить \"%1$s\"\?</string>
    <string name="removed">Мод удалён</string>
    <string name="action_repo">Скачать моды</string>
    <string name="mods_repo">Репозиторий</string>
    <string name="desc">Описание</string>
    <string name="changelog">Список изменений</string>
    <string name="version">"Версия "</string>
    <string name="check_internet">Нет подключения к Интернету.</string>
    <string name="first_run">"Привет! Если вы скачали это приложение - значит, что вы хотите установить моды на Brawl Stars.\n   Инструкция довольно проста:\n     1) Нажмите на плюсик снизу и выберите zip-архив с модом или модифицированный APK-файл;\n  2) Выберите нужные файлы из мода(ов);\n  3) Нажмите на кнопку установки и ожидайте. "</string>
    <string name="title_home">Моды</string>
    <string name="title_repo">Репозиторий</string>
    <string name="title_more">Больше</string>
    <string-array name="pref_theme_read">
        <item name="light">Светлая</item>
        <item name="auto">Авто</item>
        <item name="dark">Тёмная</item>
    </string-array>
    <string-array name="pref_theme">
        <item name="light">1</item>
        <item name="auto">0</item>
        <item name="dark">-1</item>
    </string-array>
</resources>
