<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.DropDownPreference
        app:defaultValue="0"
        app:dialogTitle="@string/theme"
        app:entries="@array/pref_theme_read"
        app:entryValues="@array/pref_theme"
        app:icon="@drawable/ic_color_lens"
        app:key="theme"
        app:title="@string/theme" />

    <androidx.preference.Preference
        app:icon="@drawable/ic_edit"
        app:fragment="com.stunner.moderstars.ui.more.TabEditorFragment"
        app:summary="@string/editordesc"
        app:title="@string/tabeditor" />
    <androidx.preference.Preference
        app:fragment="com.stunner.moderstars.ui.more.AboutFragment"
        app:icon="@drawable/ic_info"
        app:title="@string/about_app" />
</androidx.preference.PreferenceScreen>